--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
-    <title>Charts App</title>
+    <title>DJW Scholarship Fund</title>
   </head>
   <body>
     <noscript>
